# portable_attributes

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xmake.lua
cmake/: attrsConfig.cmake.in  cattrsConfig.cmake.in  portable_attributesConfig.cmake.in
include/: attrs.h  cattrs.h  portable_attributes.h
